update code for continual_pre_training

--- a/continual_pre_training.ipynb
+++ b/continual_pre_training.ipynb
@@ -1,20 +1,421 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Continuous Pre-training using LLM recipie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================================================IMPORT=================================================================\n",
+    "\n",
+    "from datasets import DatasetDict, load_dataset, load_from_disk\n",
+    "import os\n",
+    "import warnings\n",
+    "from transformers import (\n",
+    "    AutoTokenizer,\n",
+    "    AutoModelForCausalLM,\n",
+    "    Trainer,\n",
+    "    TrainingArguments,\n",
+    "    EarlyStoppingCallback,\n",
+    ")\n",
+    "import time\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "os.environ.update(\n",
+    "    {\n",
+    "        # \"NCCL_P2P_DISABLE\": \"1\",\n",
+    "        # \"NCCL_IB_DISABLE\": \"1\",\n",
+    "        # \"TOKENIZERS_PARALLELISM\": \"false\",\n",
+    "        # \"CUDA_VISIBLE_DEVICES\": \"3,2,1\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "from datasets import load_from_disk\n",
+    "from transformers import (\n",
+    "    AutoModelForCausalLM,\n",
+    "    AutoTokenizer,\n",
+    "    TrainingArguments,\n",
+    "    pipeline,\n",
+    "    logging,\n",
+    "    DataCollatorForLanguageModeling,\n",
+    ")\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_number = 10000  # Number of samples to be used for training and evaluation\n",
+    "learning_rate = 1e-6  # Learning rate for the optimizer\n",
+    "per_device_train_batch_size = 10  # Batch size for training per device\n",
+    "per_device_eval_batch_size = 10  # Batch size for evaluation per device\n",
+    "num_train_epochs = 5  # Number of epochs for training\n",
+    "weight_decay = 0.01  # Weight decay rate for regularization\n",
+    "MAX_LEN = 512  # Maximum sequence length for model inputs\n",
+    "warmup_ratio = 0.5\n",
+    "resume_from_checkpoint = False\n",
+    "\n",
+    "model_name = (\n",
+    "    # \"/home/llama/Personal_Directories/srb/binary_classfication/Llama-3.2-3B-Instruct\"\n",
+    "    \"/home/snt/llm_models/Llama-3.2-1B-Instruct\"\n",
+    ")\n",
+    "val_dataset_path = (\n",
+    "    \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\"\n",
+    ")\n",
+    "train_dataset_path = \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/nllb_llama_complete_subsentences_filtered.arrow\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 加载训练数据集\n",
+    "train_dataset = (\n",
+    "    load_from_disk(train_dataset_path)\n",
+    "    .select_columns([\"subsentence\", \"translated_text\"])\n",
+    "    .rename_columns(\n",
+    "        {\n",
+    "            \"subsentence\": \"Luxembourgish\",\n",
+    "            \"translated_text\": \"English\",\n",
+    "        }\n",
+    "    )\n",
+    "    .select([i for i in range(sample_number)])\n",
+    ")\n",
+    "\n",
+    "val_dataset = (\n",
+    "    load_from_disk(val_dataset_path)\n",
+    "    .rename_columns(\n",
+    "        {\n",
+    "            \"sentence_ltz_Latn\": \"Luxembourgish\",\n",
+    "            \"sentence_eng_Latn\": \"English\",\n",
+    "        }\n",
+    "    )\n",
+    "    .select([i for i in range(100)])\n",
+    ")\n",
+    "\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "\n",
+    "def create_prompt(\n",
+    "    sample, mode=\"train\", src_lng=\"Luxembourgish\", tgt_lng=\"English\", tokenizer=None\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Create a prompt using the model's EOS token.\n",
+    "\n",
+    "    Args:\n",
+    "        sample (dict): A dictionary containing source and target text.\n",
+    "        mode (str): The mode, either 'train' or 'test'.\n",
+    "        src_lng (str): Source language name.\n",
+    "        tgt_lng (str): Target language name.\n",
+    "        tokenizer: The tokenizer associated with the model (required to fetch EOS token).\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary with the constructed prompt.\n",
+    "    \"\"\"\n",
+    "    # Validate the tokenizer input\n",
+    "    if tokenizer is None or tokenizer.eos_token is None:\n",
+    "        raise ValueError(\"A tokenizer with a defined EOS token is required.\")\n",
+    "\n",
+    "    # Define the system message template.\n",
+    "    system_message = f\"Translate the {src_lng} input text into {tgt_lng}.\".upper()\n",
+    "    input_text = sample[src_lng.capitalize()].strip()  # Extract the input text.\n",
+    "    response = (\n",
+    "        sample[tgt_lng.capitalize()].strip() if tgt_lng.capitalize() in sample else \"\"\n",
+    "    )  # Extract the target text.\n",
+    "\n",
+    "    # Get the EOS token from the tokenizer.\n",
+    "    eos_token = tokenizer.eos_token\n",
+    "\n",
+    "    # Construct the full prompt.\n",
+    "    full_prompt = (\n",
+    "        \"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\n\"\n",
+    "        + system_message\n",
+    "        + \"<|eot_id|><|start_header_id|>user<|end_header_id|>\\n\\n\"\n",
+    "    )\n",
+    "    full_prompt += (\n",
+    "        input_text + \"<|eot_id|><|start_header_id|>assistant<|end_header_id|>\\n\\n\"\n",
+    "    )\n",
+    "    if mode == \"train\":\n",
+    "        full_prompt += response + eos_token\n",
+    "    return {\"prompt_response\": full_prompt}\n",
+    "\n",
+    "\n",
+    "train_dataset = train_dataset.map(\n",
+    "    lambda sample: {\n",
+    "        \"prompt_response\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\n",
+    "            \"prompt_response\"\n",
+    "        ]\n",
+    "    }\n",
+    ").select_columns([\"prompt_response\"])\n",
+    "\n",
+    "val_dataset = val_dataset.map(\n",
+    "    lambda sample: {\n",
+    "        \"prompt_response\": create_prompt(sample, mode=\"train\", tokenizer=tokenizer)[\n",
+    "            \"prompt_response\"\n",
+    "        ]\n",
+    "    }\n",
+    ").select_columns([\"prompt_response\"])\n",
+    "\n",
+    "\n",
+    "dataset = DatasetDict({\"train\": train_dataset, \"val\": val_dataset})\n",
+    "data_collator = DataCollatorForLanguageModeling(\n",
+    "    tokenizer, mlm=False, return_tensors=\"pt\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(\n",
+    "        examples[\"prompt_response\"],\n",
+    "        truncation=True,\n",
+    "        padding=\"max_length\",\n",
+    "        max_length=512,\n",
+    "        return_tensors=\"pt\",\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "tokenized_train_dataset = train_dataset.map(\n",
+    "    tokenize_function, batched=True, remove_columns=[\"prompt_response\"]\n",
+    ")\n",
+    "tokenized_val_dataset = val_dataset.map(\n",
+    "    tokenize_function, batched=True, remove_columns=[\"prompt_response\"]\n",
+    ")\n",
+    "\n",
+    "# from torch.utils.data import DataLoader\n",
+    "\n",
+    "# train_dataloader = DataLoader(\n",
+    "#     tokenized_train_dataset, batch_size=5, collate_fn=data_collator\n",
+    "# )\n",
+    "\n",
+    "# for i in train_dataloader:\n",
+    "#     for j in tokenizer.batch_decode(i[\"input_ids\"]):\n",
+    "#         print(j)\n",
+    "\n",
+    "# val_dataloader = DataLoader(\n",
+    "#     tokenized_val_dataset, batch_size=5, collate_fn=data_collator\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================================================TRAINING=================================================================\n",
+    "def print_trainable_parameters(model):\n",
+    "    \"\"\"Prints the number of trainable parameters in the model.\"\"\"\n",
+    "    trainable_params = 0\n",
+    "    all_param = 0\n",
+    "    for _, param in model.named_parameters():\n",
+    "        all_param += param.numel()\n",
+    "        if param.requires_grad:\n",
+    "            trainable_params += param.numel()\n",
+    "    return f\"trainable params: {trainable_params} || all params: {all_param} || trainable%: {100 * trainable_params / all_param}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_ddp_accelerate():\n",
+    "    model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "    model.config.use_cache = False\n",
+    "    current = time.time()\n",
+    "    output_dir = f\"logs/fit_{current}\"\n",
+    "    print(print_trainable_parameters(model))\n",
+    "    # 定义训练参数\n",
+    "    training_args = TrainingArguments(\n",
+    "        output_dir=output_dir,\n",
+    "        num_train_epochs=num_train_epochs,\n",
+    "        per_device_train_batch_size=per_device_train_batch_size,\n",
+    "        per_device_eval_batch_size=per_device_eval_batch_size,\n",
+    "        warmup_ratio=warmup_ratio,\n",
+    "        evaluation_strategy=\"epoch\",\n",
+    "        save_strategy=\"epoch\",\n",
+    "        # eval_steps=500,\n",
+    "        logging_steps=25,\n",
+    "        learning_rate=learning_rate,\n",
+    "        weight_decay=weight_decay,\n",
+    "        fp16=True,\n",
+    "        max_grad_norm=0.3,\n",
+    "        group_by_length=True,\n",
+    "        lr_scheduler_type=\"cosine\",\n",
+    "        report_to=\"tensorboard\",\n",
+    "        ddp_find_unused_parameters=False,\n",
+    "        remove_unused_columns=False,\n",
+    "        disable_tqdm=False,\n",
+    "        load_best_model_at_end=True,\n",
+    "    )\n",
+    "    writer = SummaryWriter(log_dir=output_dir)\n",
+    "    # 定义 Trainer\n",
+    "    trainer = Trainer(\n",
+    "        model=model,\n",
+    "        args=training_args,\n",
+    "        train_dataset=tokenized_train_dataset,\n",
+    "        eval_dataset=tokenized_val_dataset,\n",
+    "        tokenizer=tokenizer,\n",
+    "        data_collator=data_collator,\n",
+    "        callbacks=[EarlyStoppingCallback(early_stopping_patience=2)],\n",
+    "    )\n",
+    "\n",
+    "    # print(\"Starting evaluation before training...\")\n",
+    "    # initial_eval_results = trainer.evaluate()\n",
+    "    # print(f\"Initial evaluation results: {initial_eval_results}\")\n",
+    "\n",
+    "    # 开始训练\n",
+    "    trainer.train(resume_from_checkpoint=resume_from_checkpoint)\n",
+    "\n",
+    "    # 保存模型\n",
+    "    model.save_pretrained(f\"{output_dir}/llama2-parallel-trained\")\n",
+    "    tokenizer.save_pretrained(f\"{output_dir}/llama2-parallel-trained\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 1235814400 || all params: 1235814400 || trainable%: 100.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='5000' max='5000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [5000/5000 1:20:48, Epoch 5/5]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2.255500</td>\n",
+       "      <td>2.479201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.734400</td>\n",
+       "      <td>2.126006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.444500</td>\n",
+       "      <td>2.107605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1.174800</td>\n",
+       "      <td>2.178716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1.121500</td>\n",
+       "      <td>2.235270</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "There were missing keys in the checkpoint model loaded: ['lm_head.weight'].\n"
+     ]
+    }
+   ],
+   "source": [
+    "from accelerate import Accelerator\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    accelerator = Accelerator()\n",
+    "    train_ddp_accelerate()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mt_lux_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
