--- a/mt_validation.ipynb
+++ b/mt_validation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "id": "FzuMjdwB6YsF"
    },
@@ -18,16 +18,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/snt/miniconda3/envs/mt_lux_env/lib/python3.9/site-packages/peft/tuners/tuners_utils.py:543: UserWarning: Model with `tie_word_embeddings=True` and the tied_target_modules=['lm_head'] are part of the adapter. This can lead to complications, for example when merging the adapter or converting your model to formats other than safetensors. See for example https://github.com/huggingface/peft/issues/2018.\n",
-      "  warnings.warn(\n",
-      "Generating responses: 100%|██████████| 10/10 [00:11<00:00,  1.12s/it]\n"
+      "/home/snt/miniconda3/envs/mt_lux_env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Generating responses: 100%|██████████| 1012/1012 [06:52<00:00,  2.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average SPBLEU Score: 9.97\n"
+      "Average SPBLEU Score: 25.81\n"
      ]
     }
    ],
@@ -91,21 +91,26 @@
     "    torch_dtype=torch.float16,\n",
     "    device_map=\"cuda:0\",\n",
     ")\n",
-    "checkpoint = \"/home/snt/projects_lujun/mt_luxembourgish/logs/fit_1734023588.9267883/checkpoint-100\"\n",
-    "model = PeftModel.from_pretrained(base_model, checkpoint)\n",
+    "checkpoint = \"/home/snt/projects_lujun/mt_luxembourgish/logs/fit_1734873129.3395984/checkpoint-2000\"\n",
+    "# model = PeftModel.from_pretrained(base_model, checkpoint)\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    checkpoint,\n",
+    "    device_map=\"cuda:0\",\n",
+    ")\n",
+    "# model = base_model\n",
     "\n",
     "val_dataset = (\n",
     "    load_from_disk(\n",
     "        \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\"\n",
     "        # \"/home/llama/Personal_Directories/srb/mt_luxembourgish/data/NC_LUX.arrow\"\n",
-    "    )\n",
-    "    .rename_columns(\n",
+    "    ).rename_columns(\n",
     "        {\n",
     "            \"sentence_ltz_Latn\": \"Luxembourgish\",  # Renaming 'subsentence' to 'sentence_eng_Latn'\n",
     "            \"sentence_eng_Latn\": \"English\",  # Renaming 'translated_text' to 'sentence_ltz_Latn'\n",
     "        }\n",
     "    )\n",
-    "    .select([i for i in range(10)])\n",
+    "    # .select([i for i in range(20)])\n",
     ")\n",
     "\n",
     "\n",
@@ -186,7 +191,7 @@
     "        llm_response = (\n",
     "            generate_response(test_prompt, model)\n",
     "            .replace(\"<|begin_of_text|>\", \"\")\n",
-    "            .replace(\"<eot_id|>\", \"\")\n",
+    "            .replace(\"<|eot_id|>\", \"\")\n",
     "        )\n",
     "\n",
     "        ground_truth = sample.get(\n",
@@ -230,134 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>LLM_Output</th>\n",
-       "      <th>Ground_Truth</th>\n",
-       "      <th>SPBLEU_Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;\"Mir hunn 4 Mënter al Maas, d...</td>\n",
-       "      <td>[\"We now have 4-month-old mice that are non-di...</td>\n",
-       "      <td>1.022952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;Dr. Ehud Ur, Professor of Med...</td>\n",
-       "      <td>[Dr. Ehud Ur, professor of medicine at Dalhous...</td>\n",
-       "      <td>22.426656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;Many experts are skeptical ab...</td>\n",
-       "      <td>[Like some other experts, he is skeptical abou...</td>\n",
-       "      <td>3.324613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;I am Sara Danius, secretary t...</td>\n",
-       "      <td>[On Monday, Sara Danius, permanent secretary o...</td>\n",
-       "      <td>21.054338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;\"D'Danius hat gesot, dass der...</td>\n",
-       "      <td>[Danius said, \"Right now we are doing nothing....</td>\n",
-       "      <td>1.324649</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;Virdrun huet den CEO, den Jam...</td>\n",
-       "      <td>[Previously, Ring's CEO, Jamie Siminoff, remar...</td>\n",
-       "      <td>7.578479</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;The internet is now set up on...</td>\n",
-       "      <td>[He built a WiFi door bell, he said.]</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;The Siminoff has said that th...</td>\n",
-       "      <td>[Siminoff said sales boosted after his 2013 ap...</td>\n",
-       "      <td>3.881078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;In 2017 wurde die Siminoff-Pr...</td>\n",
-       "      <td>[In late 2017, Siminoff appeared on shopping t...</td>\n",
-       "      <td>3.989100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>&lt;|begin_of_text|&gt;The ring had to compete with ...</td>\n",
-       "      <td>[Ring also settled a lawsuit with competing se...</td>\n",
-       "      <td>5.007816</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          LLM_Output  \\\n",
-       "0  <|begin_of_text|>\"Mir hunn 4 Mënter al Maas, d...   \n",
-       "1  <|begin_of_text|>Dr. Ehud Ur, Professor of Med...   \n",
-       "2  <|begin_of_text|>Many experts are skeptical ab...   \n",
-       "3  <|begin_of_text|>I am Sara Danius, secretary t...   \n",
-       "4  <|begin_of_text|>\"D'Danius hat gesot, dass der...   \n",
-       "5  <|begin_of_text|>Virdrun huet den CEO, den Jam...   \n",
-       "6  <|begin_of_text|>The internet is now set up on...   \n",
-       "7  <|begin_of_text|>The Siminoff has said that th...   \n",
-       "8  <|begin_of_text|>In 2017 wurde die Siminoff-Pr...   \n",
-       "9  <|begin_of_text|>The ring had to compete with ...   \n",
-       "\n",
-       "                                        Ground_Truth  SPBLEU_Score  \n",
-       "0  [\"We now have 4-month-old mice that are non-di...      1.022952  \n",
-       "1  [Dr. Ehud Ur, professor of medicine at Dalhous...     22.426656  \n",
-       "2  [Like some other experts, he is skeptical abou...      3.324613  \n",
-       "3  [On Monday, Sara Danius, permanent secretary o...     21.054338  \n",
-       "4  [Danius said, \"Right now we are doing nothing....      1.324649  \n",
-       "5  [Previously, Ring's CEO, Jamie Siminoff, remar...      7.578479  \n",
-       "6              [He built a WiFi door bell, he said.]      0.000000  \n",
-       "7  [Siminoff said sales boosted after his 2013 ap...      3.881078  \n",
-       "8  [In late 2017, Siminoff appeared on shopping t...      3.989100  \n",
-       "9  [Ring also settled a lawsuit with competing se...      5.007816  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pre_finetuned_responses"
+    "pre_finetuned_responses.to_csv(\"output_base_model.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
