--- a/Llama3_8b_SFT_Finetune.ipynb
+++ b/Llama3_8b_SFT_Finetune.ipynb
@@ -109,8 +109,7 @@
     }
    ],
    "source": [
-    "dataset[\"validation\"]\n",
-    "\n"
+    "dataset[\"validation\"]"
    ]
   },
   {
@@ -195,7 +194,7 @@
     "# getting my standard eval set\n",
     "instruct_tune_dataset = load_dataset(\"ccibeekeoc42/english_to_igbo\")\n",
     "instruct_tune_dataset[\"test\"] = instruct_tune_dataset[\"test\"].select(range(200))\n",
-    "eval_set = instruct_tune_dataset[\"test\"].select(range(190,200))"
+    "eval_set = instruct_tune_dataset[\"test\"].select(range(190, 200))"
    ]
   },
   {
@@ -247,11 +246,11 @@
     }
    ],
    "source": [
-    "eval_set2 = dataset[\"validation\"].select(range(190,200))\n",
-    "prompt, response = eval_set2[2]['prompt_response'].split(\"[/INST]\")\n",
+    "eval_set2 = dataset[\"validation\"].select(range(190, 200))\n",
+    "prompt, response = eval_set2[2][\"prompt_response\"].split(\"[/INST]\")\n",
     "prompt += \"[/INST] \"\n",
     "print(f\"Prompt: {prompt}\")\n",
-    "print(\"~~~~~~~~~~~~~~~~~~~~~~~~~~\"*4)\n",
+    "print(\"~~~~~~~~~~~~~~~~~~~~~~~~~~\" * 4)\n",
     "print(f\"Response: {response}\")"
    ]
   },
@@ -592,14 +591,25 @@
    "source": [
     "# Load the model in `4bit`, with double quantization, with `bfloat16` as the compute dtype.\n",
     "import torch\n",
-    "from transformers import (AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, TrainingArguments, pipeline, logging)\n",
+    "from transformers import (\n",
+    "    AutoModelForCausalLM,\n",
+    "    AutoTokenizer,\n",
+    "    BitsAndBytesConfig,\n",
+    "    TrainingArguments,\n",
+    "    pipeline,\n",
+    "    logging,\n",
+    ")\n",
     "\n",
     "# bitsandbytes parameters\n",
-    "use_4bit = True # Activate 4-bit precision base model loading\n",
-    "bnb_4bit_compute_dtype = \"float16\" # Compute dtype for 4-bit base models\n",
-    "bnb_4bit_quant_type = \"nf4\" # Quantization type (fp4 or nf4)\n",
-    "use_nested_quant = False # Activate nested quantization for 4-bit base models (double quantization)\n",
-    "compute_dtype = getattr(torch, bnb_4bit_compute_dtype) # Load tokenizer and model with QLoRA configuration\n",
+    "use_4bit = True  # Activate 4-bit precision base model loading\n",
+    "bnb_4bit_compute_dtype = \"float16\"  # Compute dtype for 4-bit base models\n",
+    "bnb_4bit_quant_type = \"nf4\"  # Quantization type (fp4 or nf4)\n",
+    "use_nested_quant = (\n",
+    "    False  # Activate nested quantization for 4-bit base models (double quantization)\n",
+    ")\n",
+    "compute_dtype = getattr(\n",
+    "    torch, bnb_4bit_compute_dtype\n",
+    ")  # Load tokenizer and model with QLoRA configuration\n",
     "\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit=use_4bit,\n",
@@ -616,12 +626,9 @@
     "tokenizer.padding_side = \"right\"\n",
     "\n",
     "# Setting up the model\n",
-    "device_map = {\"\": 0} # Load the entire model on the GPU 0\n",
+    "device_map = {\"\": 0}  # Load the entire model on the GPU 0\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    model_name,\n",
-    "    device_map=device_map,\n",
-    "    quantization_config=bnb_config,\n",
-    "    pretraining_tp = 1\n",
+    "    model_name, device_map=device_map, quantization_config=bnb_config, pretraining_tp=1\n",
     ")\n",
     "model.config.use_cache = False"
    ]
@@ -710,8 +717,10 @@
     "    \"\"\"\n",
     "    # Define the system message template.\n",
     "    system_message = f\"You are an expert {tgt_lng} translator. Translate the {src_lng} input text into {tgt_lng}.\".upper()\n",
-    "    input = sample[src_lng.capitalize()].strip() # Extract the input text.\n",
-    "    response = sample[tgt_lng.capitalize()].strip() if tgt_lng.capitalize() in sample else \"\" # Extract the target text.\n",
+    "    input = sample[src_lng.capitalize()].strip()  # Extract the input text.\n",
+    "    response = (\n",
+    "        sample[tgt_lng.capitalize()].strip() if tgt_lng.capitalize() in sample else \"\"\n",
+    "    )  # Extract the target text.\n",
     "\n",
     "    # Define the end-of-sequence token.\n",
     "    eos_token = \" </s>\"\n",
@@ -721,7 +730,7 @@
     "    full_prompt += input + \" [/INST] \"\n",
     "    if mode == \"train\":\n",
     "        full_prompt += response + eos_token\n",
-    "    return {'prompt_response': full_prompt}"
+    "    return {\"prompt_response\": full_prompt}"
    ]
   },
   {
@@ -734,11 +743,16 @@
    "source": [
     "# Function to generate from the model\n",
     "def generate_response(prompt, model):\n",
-    "  encoded_input = tokenizer(prompt,  return_tensors=\"pt\", add_special_tokens=True)\n",
-    "  model_inputs = encoded_input.to('cuda')\n",
-    "  generated_ids = model.generate(**model_inputs, max_new_tokens=1000, do_sample=True, pad_token_id=tokenizer.eos_token_id)\n",
-    "  decoded_output = tokenizer.batch_decode(generated_ids)\n",
-    "  return decoded_output[0].replace(prompt, \"\")"
+    "    encoded_input = tokenizer(prompt, return_tensors=\"pt\", add_special_tokens=True)\n",
+    "    model_inputs = encoded_input.to(\"cuda\")\n",
+    "    generated_ids = model.generate(\n",
+    "        **model_inputs,\n",
+    "        max_new_tokens=1000,\n",
+    "        do_sample=True,\n",
+    "        pad_token_id=tokenizer.eos_token_id\n",
+    "    )\n",
+    "    decoded_output = tokenizer.batch_decode(generated_ids)\n",
+    "    return decoded_output[0].replace(prompt, \"\")"
    ]
   },
   {
@@ -853,9 +867,9 @@
    ],
    "source": [
     "entry = eval_set[5]\n",
-    "prompt = create_prompt(entry, mode=\"train\", tgt_lng=\"igbo\")['prompt_response']\n",
+    "prompt = create_prompt(entry, mode=\"train\", tgt_lng=\"igbo\")[\"prompt_response\"]\n",
     "print(entry)\n",
-    "print(\"~~~~~~~~~~~\"*6)\n",
+    "print(\"~~~~~~~~~~~\" * 6)\n",
     "print(generate_response(prompt, model))"
    ]
   },
@@ -934,7 +948,7 @@
    "source": [
     "# Testing on single Entry\n",
     "entry = eval_set[7]\n",
-    "prompt = create_prompt(entry, mode=\"test\", tgt_lng=\"igbo\")['prompt_response']\n",
+    "prompt = create_prompt(entry, mode=\"test\", tgt_lng=\"igbo\")[\"prompt_response\"]\n",
     "print(prompt)\n",
     "print(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
     "print(generate_response(prompt, model))"
@@ -950,19 +964,24 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def generate_dataset_responses(dataset, tgt_lng, model):\n",
     "    \"\"\"Generates prompts and corresponding LLM responses for the \"test\" split of a dataset.\"\"\"\n",
     "    results = []\n",
     "    for sample in dataset:\n",
-    "        train_prompt = create_prompt(sample, mode=\"train\", tgt_lng=tgt_lng)['prompt_response'] # Create the prompt in \"train\" mode\n",
-    "        test_prompt = create_prompt(sample, mode=\"test\", tgt_lng=tgt_lng)['prompt_response'] # Create the prompt in \"test\" mode and generate the LLM response\n",
+    "        train_prompt = create_prompt(sample, mode=\"train\", tgt_lng=tgt_lng)[\n",
+    "            \"prompt_response\"\n",
+    "        ]  # Create the prompt in \"train\" mode\n",
+    "        test_prompt = create_prompt(sample, mode=\"test\", tgt_lng=tgt_lng)[\n",
+    "            \"prompt_response\"\n",
+    "        ]  # Create the prompt in \"test\" mode and generate the LLM response\n",
     "        llm_response = generate_response(test_prompt, model)\n",
     "\n",
     "        # Append the result\n",
     "        results.append([train_prompt, llm_response])\n",
     "\n",
     "    # Convert the results into a DataFrame\n",
-    "    df_results = pd.DataFrame(results, columns=['Actual', 'LLM_Output'])\n",
+    "    df_results = pd.DataFrame(results, columns=[\"Actual\", \"LLM_Output\"])\n",
     "    return df_results"
    ]
   },
@@ -978,8 +997,8 @@
     "pre_finetuned_responses_yoruba = generate_dataset_responses(eval_set, \"yoruba\", model)\n",
     "\n",
     "# Save to CSV\n",
-    "pre_finetuned_responses_igbo.to_csv('pre_finetuned_responses_igbo.csv', index=False)\n",
-    "pre_finetuned_responses_yoruba.to_csv('pre_finetuned_responses_yoruba.csv', index=False)"
+    "pre_finetuned_responses_igbo.to_csv(\"pre_finetuned_responses_igbo.csv\", index=False)\n",
+    "pre_finetuned_responses_yoruba.to_csv(\"pre_finetuned_responses_yoruba.csv\", index=False)"
    ]
   },
   {
@@ -1025,6 +1044,7 @@
     "            trainable_params += param.numel()\n",
     "    return f\"trainable params: {trainable_params} || all params: {all_param} || trainable%: {100 * trainable_params / all_param}\"\n",
     "\n",
+    "\n",
     "# printing before lora\n",
     "print_trainable_parameters(model)"
    ]
@@ -1049,9 +1069,9 @@
     "from peft import LoraConfig, PeftModel, get_peft_model, prepare_model_for_kbit_training\n",
     "\n",
     "# QLoRA parameters\n",
-    "lora_r = 64 # LoRA attention dimension\n",
-    "lora_alpha = 16 # Alpha parameter for LoRA scaling\n",
-    "lora_dropout = 0.1 # Dropout probability for LoRA layers\n",
+    "lora_r = 64  # LoRA attention dimension\n",
+    "lora_alpha = 16  # Alpha parameter for LoRA scaling\n",
+    "lora_dropout = 0.1  # Dropout probability for LoRA layers\n",
     "# Load LoRA configuration\n",
     "peft_config = LoraConfig(\n",
     "    lora_alpha=lora_alpha,\n",
@@ -1059,9 +1079,14 @@
     "    r=lora_r,\n",
     "    bias=\"none\",\n",
     "    target_modules=[\n",
-    "        \"q_proj\", \"k_proj\", \"v_proj\",\n",
-    "        \"o_proj\", \"gate_proj\",\n",
-    "        \"up_proj\", \"down_proj\", \"lm_head\",\n",
+    "        \"q_proj\",\n",
+    "        \"k_proj\",\n",
+    "        \"v_proj\",\n",
+    "        \"o_proj\",\n",
+    "        \"gate_proj\",\n",
+    "        \"up_proj\",\n",
+    "        \"down_proj\",\n",
+    "        \"lm_head\",\n",
     "    ],\n",
     "    task_type=\"CAUSAL_LM\",\n",
     ")\n",
@@ -1073,31 +1098,31 @@
     "        print(\"Your GPU supports bfloat16: accelerate training with bf16=True\")\n",
     "\n",
     "# Unused TrainingArguments parameters\n",
-    "gradient_checkpointing = True       # Enable gradient checkpointing\n",
+    "gradient_checkpointing = True  # Enable gradient checkpointing\n",
     "\n",
     "# Hyper Parameters\n",
     "training_arguments = TrainingArguments(\n",
-    "    output_dir=\"./results\",           # Model predictions and checkpoints will be stored\n",
-    "    num_train_epochs=1.5,               # Number of epochs\n",
-    "    #max_steps=-1,                     # Number of training steps (overrides num_train_epochs)\n",
-    "    per_device_train_batch_size=6,    # Batch size per GPU for training\n",
-    "    #per_device_eval_batch_size = 1,      # Batch size per GPU for evaluation\n",
-    "    #gradient_checkpointing = True,       # Enable gradient checkpointing\n",
-    "    warmup_ratio=0.03,                # Ratio of steps for a linear warmup (from 0 to learning rate)\n",
-    "    logging_steps=25,                 # Log every X updates steps\n",
+    "    output_dir=\"./results\",  # Model predictions and checkpoints will be stored\n",
+    "    num_train_epochs=1.5,  # Number of epochs\n",
+    "    # max_steps=-1,                     # Number of training steps (overrides num_train_epochs)\n",
+    "    per_device_train_batch_size=6,  # Batch size per GPU for training\n",
+    "    # per_device_eval_batch_size = 1,      # Batch size per GPU for evaluation\n",
+    "    # gradient_checkpointing = True,       # Enable gradient checkpointing\n",
+    "    warmup_ratio=0.03,  # Ratio of steps for a linear warmup (from 0 to learning rate)\n",
+    "    logging_steps=25,  # Log every X updates steps\n",
     "    # save_steps=1000,                     # Save checkpoint every X updates steps\n",
     "    save_strategy=\"epoch\",\n",
     "    evaluation_strategy=\"steps\",\n",
     "    eval_steps=500,\n",
-    "    gradient_accumulation_steps=1,    # Number of update steps to accumulate the gradients for\n",
-    "    optim=\"paged_adamw_32bit\",        # Optimizer to use\n",
-    "    learning_rate=2e-4,               # Initial learning rate (AdamW optimizer)\n",
-    "    weight_decay=0.001,               # Weight decay to apply to all layers except bias/LayerNorm weights\n",
-    "    fp16=False,                        # Use mixed precision (bfloat16)\n",
-    "    bf16=True,                        # Enable fp16/bf16 training (set bf16 to True with an A100)\n",
-    "    max_grad_norm=0.3,                # Maximum gradient normal (gradient clipping)\n",
-    "    group_by_length=True,             # Group sequences into batches with same length (Saves memory and speeds up training considerably)\n",
-    "    lr_scheduler_type=\"cosine\",       # Learning rate schedule\n",
+    "    gradient_accumulation_steps=1,  # Number of update steps to accumulate the gradients for\n",
+    "    optim=\"paged_adamw_32bit\",  # Optimizer to use\n",
+    "    learning_rate=2e-4,  # Initial learning rate (AdamW optimizer)\n",
+    "    weight_decay=0.001,  # Weight decay to apply to all layers except bias/LayerNorm weights\n",
+    "    fp16=False,  # Use mixed precision (bfloat16)\n",
+    "    bf16=True,  # Enable fp16/bf16 training (set bf16 to True with an A100)\n",
+    "    max_grad_norm=0.3,  # Maximum gradient normal (gradient clipping)\n",
+    "    group_by_length=True,  # Group sequences into batches with same length (Saves memory and speeds up training considerably)\n",
+    "    lr_scheduler_type=\"cosine\",  # Learning rate schedule\n",
     "    report_to=\"tensorboard\",\n",
     "    # load_best_model_at_end=True,\n",
     "    # metric_for_best_model=\"accuracy\",\n",
@@ -1727,8 +1752,10 @@
     "after_finetuned_responses_yoruba = generate_dataset_responses(eval_set, \"yoruba\", model)\n",
     "\n",
     "# Save to CSV\n",
-    "after_finetuned_responses_igbo.to_csv('after_finetuned_responses_igbo.csv', index=False)\n",
-    "after_finetuned_responses_yoruba.to_csv('after_finetuned_responses_yoruba.csv', index=False)"
+    "after_finetuned_responses_igbo.to_csv(\"after_finetuned_responses_igbo.csv\", index=False)\n",
+    "after_finetuned_responses_yoruba.to_csv(\n",
+    "    \"after_finetuned_responses_yoruba.csv\", index=False\n",
+    ")"
    ]
   },
   {
@@ -1764,6 +1791,7 @@
     "# del pipe\n",
     "del trainer\n",
     "import gc\n",
+    "\n",
     "gc.collect()\n",
     "gc.collect()"
    ]
@@ -1843,6 +1871,7 @@
    "outputs": [],
    "source": [
     "import locale\n",
+    "\n",
     "locale.getpreferredencoding = lambda: \"UTF-8\""
    ]
   },
@@ -1916,8 +1945,16 @@
     "# Now you can run your push_to_hub commands, using the correct parameter for the token\n",
     "now = datetime.now()\n",
     "current_time = now.strftime(\"%Y-%m-%d\")\n",
-    "model.push_to_hub(f\"ccibeekeoc42/Llama3-8b-chat-SFT-{current_time}\", check_pr=True, use_auth_token=token)\n",
-    "tokenizer.push_to_hub(f\"ccibeekeoc42/Llama3-8b-chat-SFT-{current_time}\", check_pr=True, use_auth_token=token)"
+    "model.push_to_hub(\n",
+    "    f\"ccibeekeoc42/Llama3-8b-chat-SFT-{current_time}\",\n",
+    "    check_pr=True,\n",
+    "    use_auth_token=token,\n",
+    ")\n",
+    "tokenizer.push_to_hub(\n",
+    "    f\"ccibeekeoc42/Llama3-8b-chat-SFT-{current_time}\",\n",
+    "    check_pr=True,\n",
+    "    use_auth_token=token,\n",
+    ")"
    ]
   },
   {
@@ -1986,15 +2023,20 @@
    "source": [
     "# Function to generate from the model\n",
     "def generate_response(prompt, model):\n",
-    "  encoded_input = tokenizer(prompt,  return_tensors=\"pt\", add_special_tokens=True)\n",
-    "  model_inputs = encoded_input.to('cuda')\n",
-    "  model.to('cuda')\n",
+    "    encoded_input = tokenizer(prompt, return_tensors=\"pt\", add_special_tokens=True)\n",
+    "    model_inputs = encoded_input.to(\"cuda\")\n",
+    "    model.to(\"cuda\")\n",
     "\n",
-    "  generated_ids = model.generate(**model_inputs, max_new_tokens=1000, do_sample=True, pad_token_id=tokenizer.eos_token_id)\n",
+    "    generated_ids = model.generate(\n",
+    "        **model_inputs,\n",
+    "        max_new_tokens=1000,\n",
+    "        do_sample=True,\n",
+    "        pad_token_id=tokenizer.eos_token_id\n",
+    "    )\n",
     "\n",
-    "  decoded_output = tokenizer.batch_decode(generated_ids)\n",
+    "    decoded_output = tokenizer.batch_decode(generated_ids)\n",
     "\n",
-    "  return decoded_output[0].replace(prompt, \"\")"
+    "    return decoded_output[0].replace(prompt, \"\")"
    ]
   },
   {
