--- a/notebook/data_scape.ipynb
+++ b/notebook/data_scape.ipynb
@@ -32,13 +32,11 @@
     "import pandas as pd\n",
     "import os\n",
     "import time\n",
-    "from tqdm import tqdm  # 导入 tqdm\n",
+    "from tqdm import tqdm \n",
     "\n",
-    "# URL 模板，最后的数字可以变化\n",
     "url_template = \"https://www.rtl.lu/mobiliteit/news/a/{0}.html\"\n",
     "\n",
     "\n",
-    "# 检查是否为 404 页面\n",
     "def is_page_not_found(soup):\n",
     "    return \"404\" in soup.text\n",
     "\n",
@@ -47,21 +45,21 @@
     "    metainfo = soup.find(\"div\", class_=\"article-heading__metainfo\")\n",
     "    if metainfo:\n",
     "        return metainfo.get_text(strip=True)\n",
-    "    return \"日期信息未找到\"\n",
+    "    return \"Date Information Is Not Found\"\n",
     "\n",
     "\n",
     "def extract_date_details(date_string):\n",
-    "    # 匹配日期的正则表达式\n",
+    "    \n",
     "    match = re.search(r\"Update:\\s*(\\d{2})\\.(\\d{2})\\.(\\d{4})\", date_string)\n",
     "    if match:\n",
     "        day, month, year = map(int, match.groups())\n",
     "        try:\n",
-    "            # 创建标准 datetime 对象并返回为字符串\n",
+    "            \n",
     "            date_obj = datetime(year, month, day)\n",
     "            return date_obj.strftime(\"%Y-%m-%d\")\n",
     "        except ValueError:\n",
-    "            return \"日期格式无效\"\n",
-    "    return \"日期信息未找到\"\n",
+    "            return \"Invalide Date Format\"\n",
+    "    return \"Date is not found!\"\n",
     "\n",
     "\n",
     "def scrape_article_content(article_number):\n",
@@ -71,7 +69,6 @@
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
     "\n",
-    "        # 检测 404 页面\n",
     "        if is_page_not_found(soup):\n",
     "            print(f\"文章 {article_number} 不存在（404 页面）。\")\n",
     "            return {\"url\": url, \"error\": \"404 Not Found\"}\n",
