update nllb inference.

--- a/notebook/data_processing.ipynb
+++ b/notebook/data_processing.ipynb
@@ -978,7 +978,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mt_luxembourgish_env",
+   "display_name": "causalAnalysis",
    "language": "python",
    "name": "python3"
   },
@@ -992,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
