--- a/notebook/training/CPT.ipynb
+++ b/notebook/training/CPT.ipynb
@@ -9,7 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install datasets transformers torch tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 加载训练数据集\n",
+    "\n",
     "train_dataset = (\n",
     "    load_from_disk(train_dataset_path)\n",
     "    .select_columns([\"subsentence\", \"translated_text\"])\n",
@@ -241,7 +250,7 @@
     "    current = time.time()\n",
     "    output_dir = f\"logs/fit_{current}\"\n",
     "    print(print_trainable_parameters(model))\n",
-    "    # 定义训练参数\n",
+    "    \n",
     "    training_args = TrainingArguments(\n",
     "        output_dir=output_dir,\n",
     "        num_train_epochs=num_train_epochs,\n",
@@ -280,7 +289,6 @@
     "    # initial_eval_results = trainer.evaluate()\n",
     "    # print(f\"Initial evaluation results: {initial_eval_results}\")\n",
     "\n",
-    "    # 开始训练\n",
     "    trainer.train(resume_from_checkpoint=resume_from_checkpoint)\n",
     "\n",
     "    # 保存模型\n",
@@ -401,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mt_lux_env",
+   "display_name": "causalAnalysis",
    "language": "python",
    "name": "python3"
   },
