--- a/notebook/training/CPT.ipynb
+++ b/notebook/training/CPT.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,13 @@
     "    DataCollatorForLanguageModeling,\n",
     ")\n",
     "import torch\n",
-    "from torch.utils.data import Dataset"
+    "from torch.utils.data import Dataset\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,28 +82,42 @@
     "    \"/home/snt/llm_models/Llama-3.2-1B-Instruct\"\n",
     ")\n",
     "val_dataset_path = (\n",
-    "    \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\"\n",
+    "    \"data/fake_targets/flores_devtest_arrow\"\n",
     ")\n",
-    "train_dataset_path = \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/nllb_llama_complete_subsentences_filtered.arrow\""
+    "train_dataset_path = \"data/processed/dataset_merged_llama_fake_targets.jsonl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "Directory /home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 16\u001b[0m\n\u001b[1;32m      4\u001b[0m     train_dataset_df \u001b[38;5;241m=\u001b[39m load_from_disk(train_dataset_path)\n\u001b[1;32m      6\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m      7\u001b[0m     train_dataset_df[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtranslated_text\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;241m.\u001b[39miloc[:sample_number]\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     15\u001b[0m val_dataset \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m---> 16\u001b[0m     \u001b[43mload_from_disk\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_dataset_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;241m.\u001b[39mrename_columns(\n\u001b[1;32m     18\u001b[0m         {\n\u001b[1;32m     19\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentence_ltz_Latn\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLuxembourgish\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     20\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentence_eng_Latn\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnglish\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     21\u001b[0m         }\n\u001b[1;32m     22\u001b[0m     )\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;241m.\u001b[39mselect([i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100\u001b[39m)])\n\u001b[1;32m     24\u001b[0m )\n\u001b[1;32m     27\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m AutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(model_name)\n\u001b[1;32m     28\u001b[0m tokenizer\u001b[38;5;241m.\u001b[39mpad_token \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39meos_token\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/causalAnalysis/lib/python3.9/site-packages/datasets/load.py:2689\u001b[0m, in \u001b[0;36mload_from_disk\u001b[0;34m(dataset_path, fs, keep_in_memory, storage_options)\u001b[0m\n\u001b[1;32m   2687\u001b[0m fs, \u001b[38;5;241m*\u001b[39m_ \u001b[38;5;241m=\u001b[39m url_to_fs(dataset_path, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(storage_options \u001b[38;5;129;01mor\u001b[39;00m {}))\n\u001b[1;32m   2688\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m fs\u001b[38;5;241m.\u001b[39mexists(dataset_path):\n\u001b[0;32m-> 2689\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDirectory \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   2690\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m fs\u001b[38;5;241m.\u001b[39misfile(posixpath\u001b[38;5;241m.\u001b[39mjoin(dataset_path, config\u001b[38;5;241m.\u001b[39mDATASET_INFO_FILENAME)) \u001b[38;5;129;01mand\u001b[39;00m fs\u001b[38;5;241m.\u001b[39misfile(\n\u001b[1;32m   2691\u001b[0m     posixpath\u001b[38;5;241m.\u001b[39mjoin(dataset_path, config\u001b[38;5;241m.\u001b[39mDATASET_STATE_JSON_FILENAME)\n\u001b[1;32m   2692\u001b[0m ):\n\u001b[1;32m   2693\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Dataset\u001b[38;5;241m.\u001b[39mload_from_disk(dataset_path, keep_in_memory\u001b[38;5;241m=\u001b[39mkeep_in_memory, storage_options\u001b[38;5;241m=\u001b[39mstorage_options)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: Directory /home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow not found"
+     ]
+    }
+   ],
    "source": [
+    "if train_dataset_path.endswith(\".jsonl\"):\n",
+    "    train_dataset_df = pd.read_json(train_dataset_path, lines=True)\n",
+    "else:\n",
+    "    train_dataset_df = load_from_disk(train_dataset_path)\n",
     "\n",
     "train_dataset = (\n",
-    "    load_from_disk(train_dataset_path)\n",
-    "    .select_columns([\"subsentence\", \"translated_text\"])\n",
-    "    .rename_columns(\n",
-    "        {\n",
-    "            \"subsentence\": \"Luxembourgish\",\n",
-    "            \"translated_text\": \"English\",\n",
-    "        }\n",
-    "    )\n",
-    "    .select([i for i in range(sample_number)])\n",
+    "    train_dataset_df[[\"input\", \"translated_text\"]]\n",
+    "    .rename(columns={\n",
+    "        \"input\": \"Luxembourgish\",\n",
+    "        \"translated_text\": \"English\",\n",
+    "    })\n",
+    "    .iloc[:sample_number]\n",
     ")\n",
     "\n",
     "val_dataset = (\n",
