--- a/notebook/training/CPT.ipynb
+++ b/notebook/training/CPT.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_number = 10000  # Number of samples to be used for training and evaluation\n",
+    "train_ratio = 0.1  # Number of samples to be used for training and evaluation\n",
     "learning_rate = 1e-6  # Learning rate for the optimizer\n",
     "per_device_train_batch_size = 10  # Batch size for training per device\n",
     "per_device_eval_batch_size = 10  # Batch size for evaluation per device\n",
@@ -84,6 +84,14 @@
     "weight_decay = 0.01  # Weight decay rate for regularization\n",
     "MAX_LEN = 512  # Maximum sequence length for model inputs\n",
     "warmup_ratio = 0.5\n",
+    "\n",
+    "logging_steps = 100\n",
+    "evaluation_strategy=\"steps\"\n",
+    "save_strategy=\"epoch\"\n",
+    "eval_steps=500\n",
+    "\n",
+    "max_grad_norm = 0.3\n",
+    "fp16 = True\n",
     "resume_from_checkpoint = False\n",
     "\n",
     "model_name = (\n",
@@ -93,6 +101,7 @@
     "val_dataset_path = (\n",
     "    \"data/fake_targets/flores_devtest_arrow\"\n",
     ")\n",
+    "\n",
     "train_dataset_path = \"data/processed/dataset_merged_llama_fake_targets.jsonl\""
    ]
   },
@@ -118,6 +127,8 @@
     "    train_dataset = Dataset.from_json(train_dataset_path) \n",
     "else:\n",
     "    train_dataset = load_from_disk(train_dataset_path) \n",
+    "\n",
+    "sample_number = int(len(train_dataset) * train_ratio)\n",
     "\n",
     "train_dataset = train_dataset.select(range(sample_number)) \n",
     "train_dataset = train_dataset.rename_columns({\n",
@@ -269,7 +280,7 @@
     "    model = AutoModelForCausalLM.from_pretrained(model_name)\n",
     "    model.config.use_cache = False\n",
     "    current = time.time()\n",
-    "    output_dir = f\"logs/fit_{current}\"\n",
+    "    output_dir = f\"logs/fit_{current}_{train_ratio}\"\n",
     "    print(print_trainable_parameters(model))\n",
     "    \n",
     "    training_args = TrainingArguments(\n",
@@ -278,14 +289,14 @@
     "        per_device_train_batch_size=per_device_train_batch_size,\n",
     "        per_device_eval_batch_size=per_device_eval_batch_size,\n",
     "        warmup_ratio=warmup_ratio,\n",
-    "        evaluation_strategy=\"epoch\",\n",
-    "        save_strategy=\"epoch\",\n",
-    "        # eval_steps=500,\n",
-    "        logging_steps=25,\n",
+    "        evaluation_strategy=evaluation_strategy,\n",
+    "        save_strategy=save_strategy,\n",
+    "        eval_steps=eval_steps,\n",
+    "        logging_steps=logging_steps,\n",
     "        learning_rate=learning_rate,\n",
     "        weight_decay=weight_decay,\n",
-    "        fp16=True,\n",
-    "        max_grad_norm=0.3,\n",
+    "        fp16=fp16,\n",
+    "        max_grad_norm=max_grad_norm,\n",
     "        group_by_length=True,\n",
     "        lr_scheduler_type=\"cosine\",\n",
     "        report_to=\"tensorboard\",\n",
@@ -294,7 +305,6 @@
     "        disable_tqdm=False,\n",
     "        load_best_model_at_end=True,\n",
     "    )\n",
-    "    writer = SummaryWriter(log_dir=output_dir)\n",
     "\n",
     "    trainer = Trainer(\n",
     "        model=model,\n",
@@ -306,14 +316,9 @@
     "        callbacks=[EarlyStoppingCallback(early_stopping_patience=2)],\n",
     "    )\n",
     "\n",
-    "    # print(\"Starting evaluation before training...\")\n",
-    "    # initial_eval_results = trainer.evaluate()\n",
-    "    # print(f\"Initial evaluation results: {initial_eval_results}\")\n",
-    "\n",
     "    trainer.train(resume_from_checkpoint=resume_from_checkpoint)\n",
-    "    \n",
-    "    model.save_pretrained(f\"{output_dir}/llama2-parallel-trained\")\n",
-    "    tokenizer.save_pretrained(f\"{output_dir}/llama2-parallel-trained\")"
+    "    print(\"Finished training.\")\n",
+    "    "
    ]
   },
   {
@@ -329,24 +334,9 @@
     "    accelerator = Accelerator()\n",
     "    train_ddp_accelerate()\n",
     "\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
