update path config

--- a/notebook/training/CPT.ipynb
+++ b/notebook/training/CPT.ipynb
@@ -67,12 +67,13 @@
     ")\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +95,7 @@
     "fp16 = True\n",
     "resume_from_checkpoint = False\n",
     "\n",
+    "project_root = \"/Users/lujun.li/projects/mt_luxembourgish\"\n",
     "model_name = (\n",
     "    # \"/home/llama/Personal_Directories/srb/binary_classfication/Llama-3.2-3B-Instruct\"\n",
     "    \"/home/snt/llm_models/Llama-3.2-1B-Instruct\"\n",
@@ -102,7 +104,9 @@
     "    \"data/fake_targets/flores_devtest_arrow\"\n",
     ")\n",
     "\n",
-    "train_dataset_path = \"data/processed/dataset_merged_llama_fake_targets.jsonl\""
+    "train_dataset_path = \"data/processed/dataset_merged_llama_fake_targets.jsonl\"\n",
+    "\n",
+    "sys.path.append(project_root)"
    ]
   },
   {
