--- a/notebook/training/CPT.ipynb
+++ b/notebook/training/CPT.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/snt/miniconda3/envs/mt_lux_env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ====================================================IMPORT=================================================================\n",
     "\n",
@@ -68,12 +59,13 @@
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "import pandas as pd\n",
-    "import sys"
+    "import sys\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +92,9 @@
     "    # \"/home/llama/Personal_Directories/srb/binary_classfication/Llama-3.2-3B-Instruct\"\n",
     "    \"/home/snt/llm_models/Llama-3.2-1B-Instruct\"\n",
     ")\n",
-    "val_dataset_path = (\n",
-    "    \"data/fake_targets/flores_devtest_arrow\"\n",
-    ")\n",
     "\n",
-    "train_dataset_path = \"data/processed/dataset_merged_llama_fake_targets.jsonl\"\n",
-    "\n",
+    "val_dataset_path = os.path.abspath(os.path.join(project_root, \"data/fake_targets/flores_devtest_arrow\"))\n",
+    "train_dataset_path = os.path.abspath(os.path.join(project_root, \"data/processed/dataset_merged_llama_fake_targets.jsonl\"))\n",
     "sys.path.append(project_root)"
    ]
   },
