--- a/notebook/mt_validation.ipynb
+++ b/notebook/mt_validation.ipynb
@@ -34,15 +34,6 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ.update(\n",
-    "    {\n",
-    "        # \"NCCL_P2P_DISABLE\": \"1\",\n",
-    "        # \"NCCL_IB_DISABLE\": \"1\",\n",
-    "        # \"TOKENIZERS_PARALLELISM\": \"false\",\n",
-    "        # \"CUDA_VISIBLE_DEVICES\": \"3,2,1,0\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
     "import time\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from transformers import (\n",
@@ -74,10 +65,34 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import sacrebleu\n",
-    "\n",
+    "from datasets import Dataset\n",
     "\n",
     "MAX_LEN = 512\n",
+    "train_ratio = 1.0\n",
     "model_name = \"/home/snt/llm_models/Llama-3.2-1B-Instruct\"\n",
+    "checkpoint = \"/home/snt/projects_lujun/mt_luxembourgish/logs/fit_1734873129.3395984/checkpoint-2000\"\n",
+    "val_dataset_path = \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\"\n",
+    "\n",
+    "\n",
+    "if val_dataset_path.endswith(\".jsonl\"):\n",
+    "    dataset = Dataset.from_json(val_dataset_path) \n",
+    "else:\n",
+    "    dataset = load_from_disk(val_dataset_path) \n",
+    "\n",
+    "sample_number = int(len(dataset) * train_ratio)\n",
+    "\n",
+    "train_dataset = dataset[dataset[\"split\"]==\"train\"].select(range(sample_number)) \n",
+    "train_dataset = train_dataset.rename_columns({\n",
+    "    \"input\": \"Luxembourgish\",\n",
+    "    \"translated_text\": \"English\",\n",
+    "})\n",
+    "\n",
+    "val_dataset = dataset[dataset[\"split\"]==\"val\"].select(range(sample_number))\n",
+    "val_dataset = val_dataset.rename_columns({\n",
+    "    \"input\": \"Luxembourgish\",\n",
+    "    \"translated_text\": \"English\",\n",
+    "})\n",
+    "\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
@@ -91,28 +106,13 @@
     "    torch_dtype=torch.float16,\n",
     "    device_map=\"cuda:0\",\n",
     ")\n",
-    "checkpoint = \"/home/snt/projects_lujun/mt_luxembourgish/logs/fit_1734873129.3395984/checkpoint-2000\"\n",
+    "\n",
     "# model = PeftModel.from_pretrained(base_model, checkpoint)\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    checkpoint,\n",
     "    device_map=\"cuda:0\",\n",
     ")\n",
-    "# model = base_model\n",
-    "\n",
-    "val_dataset = (\n",
-    "    load_from_disk(\n",
-    "        \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\"\n",
-    "        # \"/home/llama/Personal_Directories/srb/mt_luxembourgish/data/NC_LUX.arrow\"\n",
-    "    ).rename_columns(\n",
-    "        {\n",
-    "            \"sentence_ltz_Latn\": \"Luxembourgish\",  # Renaming 'subsentence' to 'sentence_eng_Latn'\n",
-    "            \"sentence_eng_Latn\": \"English\",  # Renaming 'translated_text' to 'sentence_ltz_Latn'\n",
-    "        }\n",
-    "    )\n",
-    "    # .select([i for i in range(20)])\n",
-    ")\n",
-    "\n",
     "\n",
     "# Function to generate from the model\n",
     "def generate_response(prompt, model):\n",
