update mt_validation for testing

--- a/notebook/mt_validation.ipynb
+++ b/notebook/mt_validation.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test the trained model"
+    "## Test the trained model using the trained model\n",
+    "\n"
    ]
   },
   {
@@ -32,40 +33,22 @@
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
-    "import time\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
     "from transformers import (\n",
     "    AutoModelForCausalLM,\n",
-    "    AutoTokenizer,\n",
-    "    DataCollatorWithPadding,\n",
-    "    TrainingArguments,\n",
+    "    AutoTokenizer\n",
     ")\n",
-    "from datasets import DatasetDict, load_from_disk\n",
-    "from peft import LoraConfig, prepare_model_for_kbit_training\n",
-    "from accelerate import Accelerator\n",
-    "from trl import SFTConfig, SFTTrainer\n",
-    "from sacrebleu.metrics import BLEU\n",
-    "\n",
-    "from datasets import load_dataset\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from transformers import (\n",
     "    AutoTokenizer,\n",
     "    AutoModelForCausalLM,\n",
-    "    BitsAndBytesConfig,\n",
-    "    TrainingArguments,\n",
     ")\n",
-    "from peft import prepare_model_for_kbit_training, LoraConfig, get_peft_model, PeftModel\n",
-    "from datasets import load_dataset\n",
-    "from trl import SFTTrainer\n",
     "import torch\n",
     "\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import sacrebleu\n",
     "from datasets import Dataset\n",
+    "from datasets import load_from_disk\n",
     "\n",
     "MAX_LEN = 512\n",
     "train_ratio = 1.0\n",
